--- a/BlackJack/index1.html
+++ b/BlackJack/index1.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+<html>
 <head>
 
-    <title></title>
+    <title>BlackJack</title>
+    <link rel="stylesheet" href="index1.css">
     
 </head>
 <body>
-    <p id="welcome-el"></p>
+<div id="body1">
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round? </p>
+    <p id="card-el">Card:</p>
+    <p id="sum-el">Sum:</p>
+    <button id="start-el" onclick="startGame()">Start Game</button>
+</div>
+
     <script src="index1.js"></script>
 </body>
+</html>
