--- a/BlackJack/index1.html
+++ b/BlackJack/index1.html
@@ -13,6 +13,9 @@
     <p id="card-el">Card:</p>
     <p id="sum-el">Sum:</p>
     <button id="start-el" onclick="startGame()">Start Game</button>
+    <button id="new-el" onclick="newGame()">New Game</button>
+    <button id="addcard-el" onclick="addCard()">Draw New Card</button>
+   
 </div>
 
     <script src="index1.js"></script>
