--- a/BlackJack/index1.html
+++ b/BlackJack/index1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> BlackJack Game</title>
         <link rel="stylesheet" href="index1.css">
     </head>
     <body>
